fix: z-index

--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -2,7 +2,6 @@
   --z-offcanvas--container-width: 375px;
   --z-offcanvas--top-space: 0;
 
-  z-index: 1000;
   display: none;
   min-width: 100%;
   height: 100%;
@@ -12,7 +11,6 @@
 }
 
 .canvas-container {
-  z-index: 1010;
   display: flex;
   overflow: -moz-scrollbars-none;
   overflow: hidden;
@@ -59,11 +57,16 @@
 
 :host([variant="overlay"]) {
   position: fixed;
+  z-index: 1000;
   top: var(--z-offcanvas--top-space);
   right: 0;
   bottom: 0;
   left: 0;
   height: calc(100% - var(--z-offcanvas--top-space));
+}
+
+:host([variant="overlay"]) > .canvas-container {
+  z-index: 1010;
 }
 
 :host([variant="overlay"]) .canvas-background {
